inyoka_theme_ubuntuusers/static/style/forum.less
/* ... */
span.pagination .pageselect, div.pagination .ellipsis {
  background-color: white;
  padding: 2px;
  margin-left: 1px;
}
span.pagination {
  span.comma {
    display: none;
  }
  .pageselect {
    border: 1px solid #aaa;
    color: #555;
    text-decoration: none;
  }
  .pageselect:hover {
    background: #555;
    color: white;
  }
}
.reportlist_head {
  background-color: #EEE;
  text-align: center;
  td.topic {
    text-align: left;
    word-wrap: break-word;
    max-width: 0px;
  }
}
dl.attachments {
  margin: 10px 0 10px 0;
  border: thin solid #ccc;
  border-right: 0;
  border-left: 0;

  dt {
    background-color: @grey_dark;
    padding-left: .5em;
  }
  dd {
    padding-bottom: 0.3em;
    vertical-align: middle;
    a {
      img.preview {
        border-top: 1px solid #000;
        border-bottom: 1px solid #000;
      }
    }
  }
}
ul.attr_list {
  li {
    display: inline;
  }
  a {
    img {
      border: thin solid #ccc;
      background-color: #f2f2f2;
      padding: 5px;
    }
    &:hover img, &:focus img {
      border-color: @brown_dark;
      background-color: @orange_d_light;
      opacity: 0.9;
    }
  }
}
ul.attr_list.broken {
  list-style: disc;
  li {
    display: block;
  }
}
div.code {
  pre {
    max-height: none;
  }
}
.topic_title {
  .ubuntu_version {
    color: #444;
    font-size: 0.9em;
  }
}
tr.unstable {
  .topic_title:before {
    content: " ";
    padding-left: 20px;
    .sprite-image(@unstable);
    .sprite-position(@unstable);
    background-repeat: no-repeat;
  }
}
.topic_box_content {
  .ubuntu_version.unstable {
    padding-left: 20px;
    .forum-sprite(@unstable);
  }

  strong, span {
    font-size: 0.9em;
  }
}
p.version_chooser {
  padding-left: 22px;
  margin-left: 22px;
}
span#version_info.unstable,
span#version_info.lts,
span#version_info.current {
  padding: 5px 10px 5px 10px;
  .rounded(5px);
}
span#version_info.unstable {
  color: #fff;
  padding-left: 20px;
  .sprite-image(@unstable);
  background-position: (@unstable-offset-x + 2) (@unstable-offset-y + 5);
  background-repeat: no-repeat;
  background-color: #cc0033;
  border: 1px solid #a8a887;

  a { color: #fff; }
}
span#version_info.lts,
span#version_info.current {
  background-color: #ffffcc;
  border: 1px solid #a8a887;
  color: #000;
  a { color: #000; }
}
td.split {
  text-align: center;
}
form {
  a.pastelink {
    float: right;
    margin-top: 1em;
  }
}
#no_recent_posts_note {
  td {
    text-align: center;
    background: #FFA;
  }
}

.splitinfo {
  float: right;
  background-color: #EAECEE;
  width: 250px;
  padding: 10px;
  margin: -10px 0px 5px 5px;

  .right {
    margin-left: 80px;
    text-align: right;
  }
}

.forum {
  tr.own {
    background-color: #F8F6F1;
  }
  tr.reported {
    background-color: #FFE8E8;
  }
}

.new_topic {
  h2 {
    word-wrap: break-word;
  }
}

.article_discussion_list {
  font-weight: bold;
}

